# tm-war-room

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  lighthouserc.json  newsletter.md  nginx.conf  pyproject.toml  start.sh
.github/: dependabot.yml
.jules/: bolt.md  sentinel.md
Plans/: a-potem-zobacz-sentry-crystalline-nova.md  jak-wchodz-jako-admin-cheeky-kay.md  performance-optimization-review-playful-penguin.md  prompt-security-audit-rippling-karp.md  security-audit-findings.md  taki-dosta-em-feedback-tm-iridescent-pebble.md  whimsical-napping-swing.md
api/: activity.py  admin.py  analytics.py  armoury.py  auth.py  b2_client.py  chat_chain.py  chat_commands.py  chat_entities.py  chat_manager.py  chat_oc_digest.py  chat_resolver.py  chat_search.py  chat_war_card.py  claim_manager.py  config.py  db.py  ff.py  flights.py  main.py  models.py  mug_candidates.py  mug_score.py  notification_dispatcher.py  observability.py  push_service.py  redis_client.py  stat_estimator.py  threat.py  time_utils.py  torn_client.py
app/: admin.py  analytics.py  auth.py  config.py  db.py  main.py  models.py  threat.py  torn_client.py
docs/: PRD.md  RESTORE_DRILL_LOG.md  RUNBOOK_RESTORE_KEYS_DB.md  publishing-to-greasyfork.md  torn-api-v2-migration.md  torn-flight-times.md
extension/: .size-limit.json  README.md  package-lock.json  package.json  stryker.config.mjs  tsconfig.json  vitest.config.ts
frontend/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
screenshots/: chat-snapshot.md
scripts/: calibrate_stat_estimator.py  probe_torn_shapes.py  (+1 more)
(+658 files in other folders)
