[project]
name = "tm-war-room"
version = "0.1.0"
description = "RW prep dashboard for The Masters faction"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
