[project]
name = "tm-hub"
version = "1.0.0"
description = "Torn.com faction toolkit for The Masters"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "cryptography>=46.0.7",
    "PyJWT>=2.8.0",
    "apscheduler>=4.0.0a5",
    "pywebpush>=2.0.0",
    "b2sdk>=2.5.0",
    "fastmcp>=3.0.0",
    "redis>=5.0.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
